--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 List of changes:
 
+* v0.42-alpha   - Changes Made:
+
+          1) Arun code auto-generation (Domains, Actions, Parameters), thanks to domain "gen" included "out-of-the-box"
+          2) @SET\DomainEnabled and @SET\ActionEnabled fixed
+          3) Improved documentation in the Arun Framework (see README.md at https://github.com/afonzeca/arun)
+          4) NOTE: The docs about API, due to lack of time, has not been updated
+          5) Published on 2018-11-14
 
 * v0.41-alpha	- Changes Made:
 		
