List of changes:
* v0.45.*-alpha   - Changes Made:

          1) Added facade support
          2) README.md update

Changes committed:
	modified:   README.md
	modified:   changelog.txt
	modified:   src/ArunCore/Core/App.php
	modified:   src/ArunCore/Core/Helpers/Sanitizer.php
	new file:   src/ArunCore/Facades/ActionManipulator.php
	new file:   src/ArunCore/Facades/ContentGenerator.php
	new file:   src/ArunCore/Facades/Core.php
	new file:   src/ArunCore/Facades/DomainManipulator.php
	new file:   src/ArunCore/Facades/Executor.php
	new file:   src/ArunCore/Facades/FacadeAbstract.php
	new file:   src/ArunCore/Facades/HelpGenerator.php
	new file:   src/ArunCore/Facades/Input.php
	new file:   src/ArunCore/Facades/LLHelper.php
	new file:   src/ArunCore/Facades/NameGenerator.php
	new file:   src/ArunCore/Facades/Output.php
	new file:   src/ArunCore/Facades/Sanitizer.php

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 List of changes:
 
-* v0.44-alpha   - Changes Made:
+* v0.45.*-alpha   - Changes Made:
+
+          1) Added facade support
+          2) README.md update
+
+* v0.44.*-alpha   - Changes Made:
 
           1) Added Phar generator runner (Core/System)
           2) Some DI Configuration fixed (PATH)
